--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,10 @@ requests = "*"
 vercel = "*"
 sqlalchemy = "*"
 dotenv = "*"
+typing-extensions = "*"
 
 [dev-packages]
 ipykernel = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.8"
