--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ test.ipynb
 **/*__pycache__**
 
 api/lib/__pycache__/**
+api/lib/__pycache__/*
 
 api/lib/process_transactions.pyc
 api/__pycache__
+
+*.json
