Update API endpoint in daily data processing workflow
- Changed the API endpoint in the `process-daily-data.yml` workflow from `process_daily_data` to `process_daily_data.py` to ensure correct function invocation.
- This update aligns the workflow with the current file structure and improves the accuracy of the data processing automation.

--- a/.github/workflows/process-daily-data.yml
+++ b/.github/workflows/process-daily-data.yml
@@ -25,7 +25,7 @@ jobs:
           response=$(curl -s -w "\n%{http_code}" \
             -H "Authorization: Bearer ${CRON_SECRET}" \
             -H "Content-Type: application/json" \
-            "${VERCEL_URL}/api/process_daily_data")
+            "${VERCEL_URL}/api/process_daily_data.py")
           
           http_code=$(echo "$response" | tail -n1)
           body=$(echo "$response" | sed '$d')
