--- a/.github/workflows/process-daily-data.yml
+++ b/.github/workflows/process-daily-data.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "📦 Installation des dépendances depuis Pipfile..."
-          pipenv install --deploy --ignore-pipfile
+          pipenv install --deploy
 
       - name: Process Daily Data
         env:
